cap nhat respondsive

--- a/asset/css/responsive.css
+++ b/asset/css/responsive.css
@@ -23,7 +23,7 @@
         padding: 0 calc((100% - 644px) / 2);
     }
     .app__container{
-        margin-top: var(--header-height);
+        margin-top: calc(var(--header-height) + var(--header-sort-bar-height));
     }
 
     .header__cart-list::after {
@@ -33,6 +33,9 @@
     .header__cart-viewcart {
 
         padding: 9px 21px
+    }
+    .header__sort-bar{
+        display: flex;
     }
 }
 
@@ -52,5 +55,40 @@
 @media (max-width: 739px) {
     .hide-on-mobile {
         display: none;
+    }
+    .header-with-sreach{
+        justify-content: space-between;
+    }
+    
+    .header__logo{
+        transform: translateX(20%);
+    }
+    .header__sreach{
+        position: fixed;
+        top: var(--header-height) ;
+        left: 0;
+        right: 0;
+        height: 46px;
+        z-index: 1;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+        padding: 0 8px;
+        animation: mobileSearchSideIn ease-in 0.3s;
+        display: none;
+    }
+    .header__mobile-sreach-icon{
+        display: block;
+    }
+    .header__sreach-checkbox:checked ~ .header__sreach{
+        display: flex;
+    }
+    @keyframes mobileSearchSideIn{
+        from{
+            opacity: 0;
+            top: calc(var(--header-height) - 8px );
+
+        }to{
+            opacity: 1;
+            top: var(--header-height);
+        }
     }
 }
