--- a/asset/css/base.css
+++ b/asset/css/base.css
@@ -8,6 +8,7 @@
     --header-height: 120px;
     --header-with-sreach-height: calc(var(--header-height) - var(--navbar-height));
     --star-gold-color: #ffce3e;
+    --header-sort-bar-height: 46px;
 }
 
 * {
