--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -1,7 +1,7 @@
 .header {
-    height: var( --header-height);
+    height: var(--header-height);
     background-image: linear-gradient(0, #fe6433, #f7442e);
-  
+
 }
 
 .header__navbar {
@@ -21,26 +21,31 @@
     position: relative;
     min-height: 26px;
 }
-.header__navbar-user{
+
+.header__navbar-user {
     display: flex;
     justify-items: center;
-    
+
 }
-.header__navbar-user-img{
+
+.header__navbar-user-img {
     width: 22px;
     height: 22px;
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.1);
 }
-.header__navbar-user-name{
+
+.header__navbar-user-name {
     margin-left: 8px;
     font-size: 1.4rem;
     font-weight: 500;
 }
-.header__navbar-item:hover .header__navbar-user-menu{
+
+.header__navbar-item:hover .header__navbar-user-menu {
     display: block;
 }
-.header__navbar-user-menu{
+
+.header__navbar-user-menu {
     position: absolute;
     padding-left: 0;
     top: calc(100% + 4px);
@@ -50,9 +55,10 @@
     width: 160px;
     list-style: none;
     z-index: 1;
-    box-shadow:  0 1px 2px #e0e0e0;
+    box-shadow: 0 1px 2px #e0e0e0;
     display: none;
 }
+
 .header__navbar-user-menu::before {
     content: "";
     border-width: 13px 17px;
@@ -62,6 +68,7 @@
     right: 10px;
     top: -23px;
 }
+
 .header__navbar-user-menu::after {
     content: "";
     display: block;
@@ -72,31 +79,36 @@
     height: 8px;
     /* background-color: black; */
 }
-.header__navbar-user-item{
-}  
-.header__navbar-user-item-sprerate{
+
+.header__navbar-user-item {}
+
+.header__navbar-user-item-sprerate {
     border-top: 1px solid rgba(131, 131, 131, 0.2);
 }
-.header__navbar-user-item a{
+
+.header__navbar-user-item a {
     text-decoration: none;
     color: var(--text-color);
     font-size: 1.4rem;
     display: block;
     padding: 5px 16px;
-   
+
 }
-.header__navbar-user-item a:hover{
+
+.header__navbar-user-item a:hover {
     background-color: #fafafa;
 }
 
-.header__navbar-user-item a:first-child{
+.header__navbar-user-item a:first-child {
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
 }
-.header__navbar-user-item a:last-child{
+
+.header__navbar-user-item a:last-child {
     border-bottom-left-radius: 2px;
     border-bottom-right-radius: 2px;
 }
+
 .header__navbar-item--has-qr:hover .header__qr {
     display: block;
     z-index: 1;
@@ -129,14 +141,17 @@
     display: flex;
     align-items: center;
 }
+
 .header__navbar-icon-link:nth-child(2) {
     margin-left: 3px;
     margin-top: -3px;
 }
+
 .header__navbar-icon-link:nth-child(3) {
     margin-left: -3px;
     margin-top: -3px;
 }
+
 .header__navbar-item--strong {
     font-weight: 600;
 }
@@ -492,14 +507,23 @@
     align-items: center;
     margin: 0 8px;
 }
-
+.header__mobile-sreach{
+    padding: 0 12px;
+}
+.header__mobile-sreach-icon {
+    font-size: 2.6rem;
+    color: var(--white-color);
+    display: none;
+}
 .header__logo {
     width: 200px;
 }
-.header__logo-link{
+
+.header__logo-link {
     text-decoration: none;
     color: var(--white-color);
 }
+
 .header__logo-img {
     width: 150px;
     color: var(--white-color);
@@ -605,12 +629,12 @@
     padding-left: 0;
     list-style: none;
     height: 40vh;
-    overflow-y: auto; 
+    overflow-y: auto;
 }
 
 .header__cart-item {
     display: flex;
-   
+
 }
 
 .header__cart-img {
@@ -636,16 +660,19 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-   
+
 }
-.header__cart-viewcart{
+
+.header__cart-viewcart {
     float: right;
     margin: 0 12px 12px;
     padding: 8px;
 }
-.header__cart-viewcart:hover{
+
+.header__cart-viewcart:hover {
     background-color: #f05d41;
 }
+
 .header__cart-item-name {
     font-size: 1.2rem;
     font-weight: 600;
@@ -665,12 +692,12 @@
     font-size: 1.4rem;
     color: var(--primary-color);
     font-weight: 600;
-   
+
 }
 
 .header__cart-item-multiply {
     font-size: 1rem;
-    margin:0 4px;
+    margin: 0 4px;
     color: #757575;
 }
 
@@ -695,13 +722,16 @@
     font-weight: 300;
     color: var(--text-color);
 }
-.header__cart-item:hover{
+
+.header__cart-item:hover {
     background-color: #f8f8f8;
 }
-.header__cart-item-remove:hover{
+
+.header__cart-item-remove:hover {
     color: var(--primary-color);
     cursor: pointer;
 }
+
 .header__sreach-input {
     width: 77%;
     height: 100%;
@@ -862,6 +892,51 @@
 
 }
 
+/* header-sort */
+.header__sort-bar {
+    position: fixed;
+    top: var(--header-height);
+    left: 0;
+    right: 0;
+    height: var(--header-sort-bar-height);
+    background-color: var(--white-color);
+    list-style: none;
+    margin: 0;
+    padding-left: 40px;
+    border-top: 1px solid #e5e5e5;
+    display: none;
+}
+
+.header__sort-item {
+    flex: 1;
+}
+
+.header__sort-link {
+    text-decoration: none;
+    color: var(--text-color);
+    font-size: 1.4rem;
+    display: block;
+    height: 100%;
+    line-height: var(--header-sort-bar-height);
+    text-align: center;
+    position: relative;
+    
+}
+.header__sort-link::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 0;
+    height: 60%;
+    border-left: 1px solid #e5e5e5;
+    transform: translateY(-50%);
+}
+.header__sort-link--active .header__sort-link{
+    color: var(--primary-color);
+}
+.header__sort-item:first-child .header__sort-link::before{
+    display: none;
+}
 .header_sreach-history-item {
     height: 38px;
     padding: 0 16px;
@@ -885,17 +960,20 @@
 }
 
 /* app container */
-.app__container{
+.app__container {
     background: #f5f5f5;
 }
-.app-content{
-   padding-top: 36px;
+
+.app-content {
+    padding-top: 36px;
 }
-.category{
+
+.category {
     border-radius: 2px;
     background: var(--white-color);
 }
-.category__heading{
+
+.category__heading {
     color: var(--text-color);
     font-size: 1.7rem;
     padding: 16px 16px 0;
@@ -906,20 +984,23 @@
     font-weight: 600;
 }
 
-.category-list{
+.category-list {
     padding-left: 0;
     list-style: none;
     padding: 0 0 9px 0;
     margin-left: 8px;
 }
-.category-item{
+
+.category-item {
     position: relative;
 
 
 }
+
 .category-item:first-child::before {
     display: none;
 }
+
 .category-item::before {
     content: "";
     border-top: 1px solid #e1e1e1;
@@ -927,13 +1008,14 @@
     top: 0;
     left: 16px;
     right: 16px;
-   
+
 }
-.category-item--active .category-item_link{
+
+.category-item--active .category-item_link {
     color: var(--primary-color);
 }
 
-.category-item_link{
+.category-item_link {
     position: relative;
     text-decoration: none;
     color: var(--text-color);
@@ -941,99 +1023,116 @@
     padding: 8px 16px;
     display: block;
 }
+
 .category-item_link:hover {
-   
+
     color: var(--primary-color);
 }
+
 /* home soft+filter */
-.home-filter{
+.home-filter {
     background-color: rgba(0, 0, 0, 0.04);
     display: flex;
     align-items: center;
     padding: 12px 22px;
     border-radius: 2px;
 }
-.home-filter__page{
+
+.home-filter__page {
     display: flex;
     margin-left: auto;
 }
-.home-filter__label{
+
+.home-filter__label {
     font-size: 1.4rem;
     color: #555;
     margin-right: 16px;
 }
+
 .home-filter__btn {
     margin-right: 12px;
     min-width: 90px;
 }
-.home-filter__page-num{
+
+.home-filter__page-num {
     font-size: 1.4rem;
     color: var(--text-color);
     margin: auto 20px;
-   
-    
+
+
 }
-.home-filter__page-current{
+
+.home-filter__page-current {
     color: var(--primary-color);
 }
-.home-filter__page-btn{
+
+.home-filter__page-btn {
     flex: 1;
     background-color: var(--white-color);
     display: flex;
     text-decoration: none;
-   
+
 }
-.home-filter__page-btn:first-child{
+
+.home-filter__page-btn:first-child {
     border-right: 1px solid #ccc;
 }
-.home-filter__page-control{
+
+.home-filter__page-control {
     border-radius: 2px;
     overflow: hidden;
     display: flex;
     width: 72px;
     height: 36px;
 }
-.home-filter__page-icon{
+
+.home-filter__page-icon {
     margin: auto;
     font-size: 1.4rem;
     color: #555;
 }
-.home-filter__page-btn--disibled{
+
+.home-filter__page-btn--disibled {
     background-color: #f9f9f9;
-} 
-.home-filter__page-btn--disibled .home-filter__page-icon{
+}
+
+.home-filter__page-btn--disibled .home-filter__page-icon {
     color: #ccc;
     cursor: default;
 }
+
 /* product item */
-.home-product{
+.home-product {
     margin-bottom: 10px;
 }
-.home-product-item{
+
+.home-product-item {
     margin-top: 10px;
     background-color: var(--white-color);
     position: relative;
-    bottom: 2px ;
+    bottom: 2px;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
     transition: transform ease-in 0.1s;
     will-change: transform;
     text-decoration: none;
     display: block;
 }
+
 .home-product-item:hover {
     transform: translateY(-1px);
     box-shadow: 0 1px 20px 0 rgba(0, 0, 0, 0.05);
 }
-.home-product-item__img{
+
+.home-product-item__img {
     padding-top: 100%;
     background-repeat: no-repeat;
     background-size: contain;
     background-position: top center;
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
-    
+
 }
-     
+
 .home-product-item__name {
     font-size: 1.5rem;
     font-weight: 500;
@@ -1046,69 +1145,75 @@
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
     color: black
-    /* text-overflow: ellipsis;
+        /* text-overflow: ellipsis;
     white-space: nowrap; */
 }
-.home-product-item-price{
+
+.home-product-item-price {
     display: flex;
-   
+
     flex-wrap: wrap;
 }
+
 .home-product-item__price-old {
-   font-size: 1.3rem;
-   color: #666;
-   text-decoration: line-through;
-   margin-left: 10px;
+    font-size: 1.3rem;
+    color: #666;
+    text-decoration: line-through;
+    margin-left: 10px;
 }
-.home-product-item__price-new{
+
+.home-product-item__price-new {
     font-size: 1.6rem;
     color: var(--primary-color);
     align-items: baseline;
     margin-left: 6px;
 }
-.home-product-item__action{
+
+.home-product-item__action {
     display: flex;
     justify-content: space-between;
     margin: 6px 10px 0;
 
 }
- 
-.home-product-item__like{
+
+.home-product-item__like {
     font-size: 1.3rem;
 }
-.home-product-item__star--gold{
+
+.home-product-item__star--gold {
     color: var(--star-gold-color);
 }
+
 .home-product-item__sold {
     font-size: 1.2rem;
     color: var(--text-color);
     margin-left: 6px;
 }
-.home-product-item__rating{
+
+.home-product-item__rating {
     font-size: 0.8rem;
     /* transform: scale(0.7); */
     transform-origin: right;
     color: #d5d5d5;
     margin-left: auto;
 }
-  
-.home-product-item__origin{
+
+.home-product-item__origin {
     display: flex;
     /* justify-content: space-between; */
     margin: 3px 10px 0;
     color: #595959;
     font-size: 1rem;
     padding-bottom: 5px;
-   
-}
-  
-.home-product-item__brand{
-    margin-right: auto;
-}
-   
-.home-product-item__origin-name{
 
 }
+
+.home-product-item__brand {
+    margin-right: auto;
+}
+
+.home-product-item__origin-name {}
+
 .home-product-item__favoutite::after {
     content: "";
     position: absolute;
@@ -1118,7 +1223,8 @@
     border-left: 3px solid transparent;
     filter: brightness(60%);
 }
-.home-product-item__favoutite{
+
+.home-product-item__favoutite {
     position: absolute;
     top: 10px;
     left: -4px;
@@ -1126,20 +1232,23 @@
     background-color: currentColor;
     font-size: 1.1rem;
     font-weight: 600;
-    border-top-right-radius: 3px ;
+    border-top-right-radius: 3px;
     border-bottom-right-radius: 3px;
     padding-right: 4px;
 }
+
 .home-product-item__favoutite i {
     font-size: 1rem;
     margin: 0 2px 0 5px;
     color: var(--white-color);
 
 }
+
 .home-product-item__favoutite span {
     color: var(--white-color);
 }
-.home-product-item__sale-off{
+
+.home-product-item__sale-off {
     position: absolute;
     right: 0;
     top: -1px;
@@ -1149,60 +1258,70 @@
     text-align: center;
     border-top-right-radius: 2px;
 }
+
 .home-product-item__sale-off::after {
     content: "";
     position: absolute;
     left: 0;
     bottom: -4px;
-    border-width: 0 20px 4px ;
+    border-width: 0 20px 4px;
     border-style: solid;
     border-color: transparent rgba(255, 216, 64, .94) transparent rgba(255, 216, 64, .94);
 }
-.home-product-item__percent{
+
+.home-product-item__percent {
     color: #ee4d2d;
     font-weight: 600;
     font-size: 1.3rem;
     position: relative;
     top: 3px;
 }
-.home-product-item__sale-off-label{
+
+.home-product-item__sale-off-label {
     color: var(--white-color);
     font-weight: 600;
     font-size: 1.2rem;
 
 }
-.home-product-item__like-icon-fill{
+
+.home-product-item__like-icon-fill {
     display: none;
     color: #f63d30;
 }
-.home-product-item__like--liked .home-product-item__like-icon-fill{
+
+.home-product-item__like--liked .home-product-item__like-icon-fill {
     display: inline-block;
 }
-.home-product-item__like--liked .home-product-item__like-icon-empty{
+
+.home-product-item__like--liked .home-product-item__like-icon-empty {
     display: none;
 }
 
 /* pagniation */
-.home-product__pagniation{
+.home-product__pagniation {
     margin: 48px 0 32px 0;
 }
+
 /* footer */
-.footer{
+.footer {
     padding-top: 16px;
     border-top: 4px solid var(--primary-color);
     background-color: var(--white-color);
 }
-.footer__heading{
+
+.footer__heading {
     font-size: 1.3rem;
     text-transform: uppercase;
     color: var(--text-color);
     font-weight: 600;
 }
-.footer-list{
+
+.footer-list {
     list-style: none;
     padding-left: 0;
 }
-.footer-item__link{
+
+.footer-item__link {
     text-decoration: none;
     color: #737373;
     font-size: 1.1rem;
@@ -1210,41 +1329,50 @@
     display: flex;
     align-items: center;
 }
+
 .footer-item__link:hover {
     color: var(--primary-color);
 }
-.footer-item__link-icon{
+
+.footer-item__link-icon {
     font-size: 1.6rem;
-    margin: -1px 8px 0 0 ;
+    margin: -1px 8px 0 0;
 }
-.footer__dowload{
+
+.footer__dowload {
     display: flex;
 }
-.footer__dowload-qr{
+
+.footer__dowload-qr {
     width: 80px;
     object-fit: contain;
     height: 80px;
     border: 1px solid var(--border-color);
 }
-.footer__dowload-apps{
+
+.footer__dowload-apps {
     flex: 1;
     margin-left: 16px;
     display: flex;
     justify-content: center;
     flex-direction: column;
 }
-.footer__dowload-app-icon-img{
+
+.footer__dowload-app-icon-img {
     height: 16px;
 }
-.footer__dowload-link{
+
+.footer__dowload-link {
     color: transparent;
     text-decoration: none;
 }
-.footer__bottom{
+
+.footer__bottom {
     padding: 10px 0;
     background-color: #f5f5f5;
 }
-.footer__text{
+
+.footer__text {
     margin: 0;
     text-align: center;
     font-size: 1.2rem;
