--- a/asset/css/responsive.css
+++ b/asset/css/responsive.css
@@ -37,6 +37,9 @@
     .header__sort-bar{
         display: flex;
     }
+    .app-content{
+        padding-top: 8px;
+    }
 }
 
 /* tablet */
@@ -72,7 +75,7 @@
         z-index: 1;
         box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
         padding: 0 8px;
-        animation: mobileSearchSideIn ease-in 0.3s;
+        animation: mobileSearchSideIn linear 0.3s;
         display: none;
     }
     .header__mobile-sreach-icon{
@@ -80,15 +83,37 @@
     }
     .header__sreach-checkbox:checked ~ .header__sreach{
         display: flex;
+        
+    }
+    .header__sreach-history{
+        position: fixed;
+        width: 100%;
+        top: calc(var(--header-height) + var( --header-sort-bar-height));
+        left: 0;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+    }
+    .pagniation-item{
+        margin: 0 -2px;
+    }
+   
+    .home-product__pagniation{
+        --height: 28px;
+        font-size: 1rem;
+        min-width: 36px;
+
+    }
+    .app-content{
+        margin: 0;
     }
     @keyframes mobileSearchSideIn{
         from{
             opacity: 0;
-            top: calc(var(--header-height) - 8px );
+            height: 0;
 
         }to{
             opacity: 1;
-            top: var(--header-height);
+            height: 46px;
         }
     }
+
 }
