--- a/asset/css/responsive.css
+++ b/asset/css/responsive.css
@@ -1,9 +1,6 @@
 /* mobile & tablet */
 @media (max-width: 1023px) {
-    :root {
-        --navbar-height: 0px;
-        --header-height: 68px;
-    }
+   
 
     .hide-on-mobile-tablet {
         display: none;
@@ -36,14 +33,23 @@
     }
     .header__sort-bar{
         display: flex;
+        margin: 0 1px 0 -24px;
     }
     .app-content{
         padding-top: 8px;
+    }
+    .mobile-category{
+        display: block;
+        margin-left: -38px;
     }
 }
 
 /* tablet */
 @media (min-width: 740px) and (max-width: 1023px) {
+    :root {
+        --navbar-height: 0px;
+        --header-height: 68px;
+    }
     .hide-on-tablet {
         display: none;
     }
@@ -56,6 +62,10 @@
 
 /* mobile */
 @media (max-width: 739px) {
+    :root {
+        --navbar-height: 0px;
+        --header-height: 54px;
+    }
     .hide-on-mobile {
         display: none;
     }
@@ -78,12 +88,24 @@
         animation: mobileSearchSideIn linear 0.3s;
         display: none;
     }
+    .header__logo-img{
+        width: 110px;
+        margin-left: 11px;
+    }
     .header__mobile-sreach-icon{
         display: block;
     }
     .header__sreach-checkbox:checked ~ .header__sreach{
         display: flex;
         
+    }
+    .header__sreach-input{
+        font-size: 1.1rem;
+        width: 140%;
+        
+    }
+    .header__sreach-select-label{
+        font-size: 1.1rem;
     }
     .header__sreach-history{
         position: fixed;
@@ -104,6 +126,25 @@
     }
     .app-content{
         margin: 0;
+    }
+   
+    .footer__content-mobile{
+        padding: 16px 16px 26px;
+    }
+    .footer__heading{
+        text-align: center;
+    }
+    .footer__dowload,
+    .footer-item__link{
+        justify-content: center;
+    }
+    
+    .footer__dowload-apps{
+        flex: unset;
+    }
+    .footer__dowload-link{
+        display: block;
+        padding: 6px 8px;
     }
     @keyframes mobileSearchSideIn{
         from{
